--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   ],
   "author": "Ollie Williams",
   "devDependencies": {
-    "autoprefixer": "^9.4.9",
-    "node-sass": "^4.11.0",
-    "postcss-cli": "^5.0.1"
+    "autoprefixer": "9.6.1",
+    "node-sass": "4.12.0",
+    "postcss-cli": "6.1.3"
   },
   "license": "MIT",
   "bugs": {
